# Shibui

./: ARCHITECTURE.md  CLEANUP.md  CONFIG.md  Cargo.toml  FAQ.md  FEATURES_GUIDE.md  INSTALL.md  INSTALL_EASY.sh  LICENSE  QUICKSTART.md  README.md  README_SHIBUI.md  ROADMAP.md  TESTING.md  shibui.desktop
benches/: performance_tests.rs
config/: shibui.toml
scripts/: build.sh  check-system.sh  first-run.sh  install.sh  pkgbuild
src/: animations.rs  cli.rs  compositor.rs  decorations.rs  input.rs  ipc.rs  main.rs  overview.rs  profiler.rs  window.rs  workspace.rs
src/backend/: drm.rs  headless.rs  mod.rs  winit.rs
src/config/: mod.rs  reloader.rs
src/layout/: center.rs  dynamic.rs  floating.rs  horizontal.rs  mod.rs  vertical.rs
src/protocols/: input_method.rs  layer_shell.rs  mod.rs  output.rs  screencopy.rs  virtual_keyboard.rs  xdg_shell.rs
src/render/: error_overlay.rs  gles.rs  mod.rs
src/utils/: mod.rs
systemd/: shibui.service
