[package]
name = "shibui"
version = "0.1.0"
edition = "2021"
authors = ["Shibui Team"]
description = "Shibui (渋い) - A high-performance Wayland compositor with 4-in-1 layout engines"
license = "MIT"
readme = "README.md"
repository = "https://github.com/architdakhore/Shibui"
keywords = ["wayland", "compositor", "tiling", "wm", "linux", "shibui", "shibui-wm"]
categories = ["gui", "os"]

# Feature flags
[features]
default = ["renderer_gles"]
renderer_gles = ["glow", "glutin", "glutin-winit"]
profiling = []
debug-logs = []
vulkan = []  # Future Vulkan support

[dependencies]
# Wayland & Compositor
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "staging", "unstable"] }
wayland-backend = "0.3"
smithay = { version = "0.5", features = ["renderer_gl", "renderer_glow", "desktop", "wayland_frontend"] }

# Rendering
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
pixman = "0.2"

# Input Handling
input = "0.8"
xkbcommon = "0.8"

# Utilities
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

# File Watching (for hot config reload)
notify = "7.0"

# Event Loop & Async
calloop = "0.13"
crossbeam-channel = "0.5"

# Device Management
udev = "0.8"

# System Integration
systemd-journal-logger = "2.1"
nix = { version = "0.29", features = ["fs", "ioctl"] }

# Optional: Vulkan rendering (for future)
# vulkano = "0.34"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[[bin]]
name = "shibui"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Performance benchmarks
[[bench]]
name = "performance_tests"
harness = false
